# rust-webapi

./: .env  Cargo.toml
migrations/2023-12-14-133250_added_user_model/: down.sql  up.sql
migrations/2023-12-21-104500_add_email_and_pq/: down.sql  up.sql
src/: main.rs
src/common/: encryption.rs  jwt.rs
src/model/: auth.rs  errors.rs  mod.rs  schema.rs  users.rs
src/repos/: user_repo.rs
src/routes/: mod.rs  user_roues.rs  user_routes.rs
