[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["typed-header"]}
bb8 = "0.8.1"
diesel = "2.1.4"
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
jsonwebtoken = "9.2.0"
tower = { version = "0.4", features = ["util"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
tracing = "0.1.40"
async-trait = "0.1.74"
argon2 = "0.5.2"
clap = { version = "4.4.11", features = ["derive"] }
chrono = "0.4.31"
once_cell = "1.19.0"
cookie = "0.18.0"
dotenv = "0.15.0"
